manifests/tenants/mosaic/conversation_briefing/network-policy/egress-to-data.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-conversation-briefing-to-postgres-access
  annotations:
    kubernetes.io/description: network policy allowing conversation-briefing to query postgres for data
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-conversation-briefing
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-conversation-briefing-to-valkey-access
  annotations:
    kubernetes.io/description: network policy allowing conversation-briefing to use valkey as cache
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-conversation-briefing
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: valkey
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
