manifests/tenants/mosaic/conversation_briefing/network-policy/egress-to-kube-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-conversation-briefing-to-kube-dns-access
  annotations:
    kubernetes.io/description: allow conversation-briefing to perform DNS lookups via kube-dns
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-conversation-briefing
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
