manifests/tenants/mosaic/conversation_briefing/network-policy/ingress-from-observability.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-conversation-briefing-api-metrics
  annotations:
    kubernetes.io/description: allows vm to scrape the metrics endpoint for conversation briefing service
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-conversation-briefing
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
